@@ -35,6 +35,7 @@
 #include "tango_colors.h"
 
 #include <QAudio>
+#include <QAudioDeviceInfo>
 #include <QFrame>
 #include <QMenu>
 #include <QVBoxLayout>
@@ -134,7 +135,7 @@ RtpPlayerDialog::RtpPlayerDialog(QWidget &parent, CaptureFile &cf) :
     ctx_menu_->addAction(ui->actionCrosshairs);
 
     connect(ui->audioPlot, SIGNAL(mouseMove(QMouseEvent*)),
-            this, SLOT(mouseMoved(QMouseEvent*)));
+            this, SLOT(updateHintLabel()));
     connect(ui->audioPlot, SIGNAL(mousePress(QMouseEvent*)),
             this, SLOT(graphClicked(QMouseEvent*)));
 
@@ -149,6 +150,21 @@ RtpPlayerDialog::RtpPlayerDialog(QWidget &parent, CaptureFile &cf) :
 
     ui->playButton->setIcon(StockIcon("media-playback-start"));
     ui->stopButton->setIcon(StockIcon("media-playback-stop"));
+
+    QString default_out_name = QAudioDeviceInfo::defaultOutputDevice().deviceName();
+    foreach (QAudioDeviceInfo out_device, QAudioDeviceInfo::availableDevices(QAudio::AudioOutput)) {
+        QString out_name = out_device.deviceName();
+        ui->outputDeviceComboBox->addItem(out_name);
+        if (out_name == default_out_name) {
+            ui->outputDeviceComboBox->setCurrentText(out_name);
+        }
+    }
+    if (ui->outputDeviceComboBox->count() < 1) {
+        ui->outputDeviceComboBox->setEnabled(false);
+        ui->playButton->setEnabled(false);
+        ui->stopButton->setEnabled(false);
+        ui->outputDeviceComboBox->addItem(tr("No devices available"));
+    }
 
     ui->audioPlot->setMouseTracking(true);
     ui->audioPlot->setEnabled(true);
@@ -379,6 +395,7 @@ void RtpPlayerDialog::addRtpStream(struct _rtp_stream_info *rtp_stream)
 
         connect(audio_stream, SIGNAL(startedPlaying()), this, SLOT(updateWidgets()));
         connect(audio_stream, SIGNAL(finishedPlaying()), this, SLOT(updateWidgets()));
+        connect(audio_stream, SIGNAL(playbackError(QString)), this, SLOT(setPlaybackError(QString)));
         connect(audio_stream, SIGNAL(processedSecs(double)), this, SLOT(setPlayPosition(double)));
     }
     audio_stream->addRtpStream(rtp_stream);
@@ -473,6 +490,7 @@ void RtpPlayerDialog::updateWidgets()
     }
 
     ui->playButton->setEnabled(enable_play);
+    ui->outputDeviceComboBox->setEnabled(enable_play);
     ui->stopButton->setEnabled(enable_stop);
     cur_play_pos_->setVisible(enable_stop);
 
@@ -480,6 +498,7 @@ void RtpPlayerDialog::updateWidgets()
     ui->timingComboBox->setEnabled(enable_timing);
     ui->todCheckBox->setEnabled(enable_timing);
 
+    updateHintLabel();
     ui->audioPlot->replot();
 }
 
@@ -492,7 +511,7 @@ void RtpPlayerDialog::graphClicked(QMouseEvent *event)
     ui->audioPlot->setFocus();
 }
 
-void RtpPlayerDialog::mouseMoved(QMouseEvent *)
+void RtpPlayerDialog::updateHintLabel()
 {
     int packet_num = getHoveredPacket();
     QString hint = "<small><i>";
@@ -501,6 +520,8 @@ void RtpPlayerDialog::mouseMoved(QMouseEvent *)
         hint += tr("%1. Press \"G\" to go to packet %2")
                 .arg(getHoveredTime())
                 .arg(packet_num);
+    } else if (!playback_error_.isEmpty()) {
+        hint += playback_error_;
     }
 
     hint += "</i></small>";
@@ -603,6 +624,7 @@ void RtpPlayerDialog::on_playButton_clicked()
     cur_play_pos_->point1->setCoords(left, 0.0);
     cur_play_pos_->point2->setCoords(left, 1.0);
     cur_play_pos_->setVisible(true);
+    playback_error_.clear();
     ui->audioPlot->replot();
 }
 
@@ -707,6 +729,13 @@ int RtpPlayerDialog::getHoveredPacket()
     double ts = ui->audioPlot->xAxis->pixelToCoord(ui->audioPlot->mapFromGlobal(QCursor::pos()).x());
 
     return audio_stream->nearestPacket(ts, !ui->todCheckBox->isChecked());
+}
+
+// Used by RtpAudioStreams to initialize QAudioOutput. We could alternatively
+// pass the corresponding QAudioDeviceInfo directly.
+const QString RtpPlayerDialog::currentOutputDeviceName()
+{
+    return ui->outputDeviceComboBox->currentText();
 }
 
 void RtpPlayerDialog::on_jitterSpinBox_valueChanged(double)
